// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeControls > renders correctly at 0 volume (muted) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full max-w-md gap-3 text-ink-500 dark:text-ink-400 mb-6"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume-x"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <line
        x1="22"
        x2="16"
        y1="9"
        y2="15"
      />
      <line
        x1="16"
        x2="22"
        y1="9"
        y2="15"
      />
    </svg>
    <input
      class="w-full h-1 bg-ink-200 dark:bg-ink-700 rounded-lg appearance-none cursor-pointer accent-ember-500"
      max="100"
      min="0"
      type="range"
      value="0"
    />
  </div>
</DocumentFragment>
`;

exports[`VolumeControls > renders correctly at high volume (>= 50) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full max-w-md gap-3 text-ink-500 dark:text-ink-400 mb-6"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume2 lucide-volume-2"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
      <path
        d="M19.364 18.364a9 9 0 0 0 0-12.728"
      />
    </svg>
    <input
      class="w-full h-1 bg-ink-200 dark:bg-ink-700 rounded-lg appearance-none cursor-pointer accent-ember-500"
      max="100"
      min="0"
      type="range"
      value="80"
    />
  </div>
</DocumentFragment>
`;

exports[`VolumeControls > renders correctly at low volume (< 50) 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full max-w-md gap-3 text-ink-500 dark:text-ink-400 mb-6"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-volume1 lucide-volume-1"
      fill="none"
      height="20"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
      />
      <path
        d="M16 9a5 5 0 0 1 0 6"
      />
    </svg>
    <input
      class="w-full h-1 bg-ink-200 dark:bg-ink-700 rounded-lg appearance-none cursor-pointer accent-ember-500"
      max="100"
      min="0"
      type="range"
      value="30"
    />
  </div>
</DocumentFragment>
`;
